backend changes -- stack overflow error

--- a/backend/notification-service/pom.xml
+++ b/backend/notification-service/pom.xml
@@ -31,9 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.jobrunr</groupId>
-            <artifactId>jobrunr</artifactId>
-            <version>6.2.3</version>
-            <scope>compile</scope>
+            <artifactId>jobrunr-spring-boot-2-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
