--- a/backend/app/src/main/resources/application-local.yml
+++ b/backend/app/src/main/resources/application-local.yml
@@ -4,12 +4,12 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     password: postgres
-    url: jdbc:postgresql://localhost:5432/crop_management9
+    url: jdbc:postgresql://localhost:5432/crop_management10
     username: postgres
   jpa:
     database: POSTGRESQL
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -34,3 +34,10 @@ system:
 logging:
   file:
     name: farm-hub.log
+org:
+  jobrunr:
+    background-job-server:
+      enabled: true
+    dashboard:
+      enabled: true
+      port: 8000
