--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -36,7 +36,7 @@
         <json-webtoken.version>0.11.5</json-webtoken.version>
         <spring-cloud.version>2021.0.8</spring-cloud.version>
         <drools.version>9.44.0.Final</drools.version>
-        <jobrunr.version>6.2.3</jobrunr.version>
+        <jobrunr.version>7.2.3</jobrunr.version>
         <validation>2.0.1.Final</validation>
         <open-csv>5.8</open-csv>
         <open-pdf>1.3.27</open-pdf>
@@ -81,6 +81,12 @@
                 <groupId>com.github.librepdf</groupId>
                 <artifactId>openpdf</artifactId>
                 <version>${open-pdf}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jobrunr</groupId>
+                <artifactId>jobrunr-spring-boot-2-starter</artifactId>
+                <version>${jobrunr.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
