--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,7 +29,10 @@
     <description>Crop Management System</description>
 
     <properties>
-        <mavem.compiler.source>17</mavem.compiler.source>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
         <sprindoc.version>1.7.0</sprindoc.version>
         <postgresql.version>42.5.4</postgresql.version>
@@ -120,24 +123,23 @@
         </repository>
     </distributionManagement>
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>jpg</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>png</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
+                </configuration>
+            </plugin>
+        </plugins>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources/images</directory>
-                <includes>
-                    <include>**/*.jpg</include>
-                    <include>**/*.png</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources/rules</directory>
+                <filtering>true</filtering>
             </resource>
         </resources>
     </build>
