--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "badge": "^1.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.417.0",
@@ -46,6 +47,7 @@
     "react-hook-form": "^7.52.1",
     "react-resizable-panels": "^2.0.22",
     "recharts": "^2.12.7",
+    "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.0",
