--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.417.0",
     "next": "^14.2.23",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.2",
     "react": "^18",
     "react-day-picker": "^9.5.0",
     "react-dom": "^18",
