--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.6",
     "@react-spring/core": "^9.7.4",
     "@react-spring/three": "^9.7.4",
     "@react-spring/web": "^9.7.4",
