--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -139,7 +139,13 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <filtering>true</filtering>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources/crops</directory>
             </resource>
         </resources>
     </build>
